tests/__snapshots__/validation-template-test-file-type-errors-stderr.snap.txt
Error: Type 'string' is not assignable to type 'number'. ts(2322)

   5 | `;
   6 | 
   7 | export const a: number = "nine";
     |              ~
   8 | 
   9 | for (const target of ["string", "number"]) {
  10 |   testText += `test("is ${target} a string?", () => {

       at ./__typetests__/test-file-type-errors.tst.ts:7:14

